Add image, change quotes, add introduction, and change button's text

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -8,12 +8,14 @@
   </head>
   <body>
     <div id="content">
-      <h1>My Portfolio</h1>
+      <h1>Carlos Ortega's Portfolio</h1>
       <p>This is my portfolio.</p>
       <p>Click <a href="/hello">here</a> to see content created by server code.</p>
       <p>Click here to get a random message:</p>
-      <button onclick="addRandomGreeting()">Hello</button>
+      <button onclick="addRandomGreeting()">Get deep</button>
       <div id="greeting-container"></div>
+      <p>Hello everone my name is Carlos. I live in Ciudad Juarez, Chihuahua, Mexico. I attend the University of TExas at El Paso.</p>
+      <img src="/images/Me.jpg" />
     </div>
   </body>
 </html>
