Add image, change quotes, add introduction, and change button's text

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -16,6 +16,8 @@
       <div id="greeting-container"></div>
       <p>Hello everone my name is Carlos. I live in Ciudad Juarez, Chihuahua, Mexico. I attend the University of TExas at El Paso.</p>
       <img src="/images/Me.jpg" />
+      <p>Hello I was born in El Paso Texas and have lived all my life in Ciudad Juarez, Chihuahua, Mexico. I like hearing people and helping them alleviate their stress, when possible. I like learning new stuff and getting good at it.</p>
+      <p></p>
     </div>
   </body>
 </html>
