--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -17,7 +17,13 @@
       <p>Hello everone my name is Carlos. I live in Ciudad Juarez, Chihuahua, Mexico. I attend the University of TExas at El Paso.</p>
       <img src="/images/Me.jpg" />
       <p>Hello I was born in El Paso Texas and have lived all my life in Ciudad Juarez, Chihuahua, Mexico. I like hearing people and helping them alleviate their stress, when possible. I like learning new stuff and getting good at it.</p>
-      <p>I do not have that much of experience in technical projects regarding computer science. I had an internship with the National Oceanic and Atmospheric Administration. I was in charge of the data visualization of a repository from New York's Health Department  reagrding COVID 19. Also, this spring I am participating in Google's Tech Exchange program.</p>
+      <h2>List of what I have participated on:</h2>
+      <ul style="list-style-type:square;">
+        <li>NOAA internship</li>
+        <li>Google's Tech Exchange (participating)</li>
+        <li>Google's Sofware product sprint (particicpating)</li>
+      </ul>
+
     </div>
   </body>
 </html>
