Add three images that Carlos wants to visit

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -23,6 +23,20 @@
         <li>Google's Tech Exchange (participating)</li>
         <li>Google's Sofware product sprint (particicpating)</li>
       </ul>
+      <h3>Link to my linkedin</h3>
+      <a href= "https://www.linkedin.com/in/carlos-ortega-77147b1a2/">
+        
+        <img src = /images/linkedin.jpg>
+      </a>
+            <h3>Link to my GitHub</h3>
+      <a href= "https://github.com/Caortega4">
+        
+        <img src = /images/github.png>
+      </a>
+      <h3>Places I would like to visit:</h3>
+      <img src = "/images/kyoto.jpg">
+      <img src = "/images/lec.jpg">
+      <img src = "/images/rome.jpg">
 
     </div>
   </body>
