Add three images for photo gallery

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -38,6 +38,13 @@
       <img src = "/images/lec.jpg">
       <img src = "/images/rome.jpg">
 
+      <h3>What do I like photographing?</h3>
+      <p>I am not a very good photographer, but I do like taking some pictures when I think that a good photo can come out of it. Plants, cookies, pastries, the sky, or leaces are some of the things that I like picturing the most.</p>
+      <img src = "/images/leaves.jpeg">
+      <img src = "/images/carlos-selfie.jpg">
+      <img src = "/images/tree.jpg">      
+
+
     </div>
   </body>
 </html>
