Add a script file that is loaded by the portfolio's html to display a phrase from a servlet

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -5,9 +5,14 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
+    <script src="second_script.js"></script>
   </head>
   <body>
     <div id="content">
+      <button onclick="showPhrase();">
+        Get phrase
+      </button>
+      <p id="phrase-container"></p>
       <h1>Carlos Ortega's Portfolio</h1>
       <p>This is my portfolio.</p>
       <p>Click <a href="/hello">here</a> to see content created by server code.</p>
