--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -5,7 +5,7 @@
     <title>My Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js"></script>
-    <script src="second_script.js"></script>
+    <script src="phrase_script.js"></script>
   </head>
   <body>
     <div id="content">
