--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -49,6 +49,14 @@
       <img src = "/images/carlos-selfie.jpg">
       <img src = "/images/tree.jpg">      
 
+      <form action="/form-handler" method="POST">
+        <p>Name:</p>
+        <textarea name="name-input"></textarea>
+        <p>Message</p>
+        <textarea name="message-input"></textarea>
+        <br/>
+        <input type="submit" />
+      </form>
 
     </div>
   </body>
